--- a/AI Agents in LangGraph/Lesson 1 - Simple ReAct Agent from Scratch.ipynb
+++ b/AI Agents in LangGraph/Lesson 1 - Simple ReAct Agent from Scratch.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "98dd8a42",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "74bce9cd",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! How are you doing today?\n"
+      "Hello! How can I assist you today?\n"
      ]
     }
    ],
